--- a/src/pug/pages/homepage/work/modern_cottage/slider.pug
+++ b/src/pug/pages/homepage/work/modern_cottage/slider.pug
@@ -24,4 +24,30 @@ include ../../../../_paths.pug
                             src=`${paths.img.img}/modern-cottage/slide-${i}.jpg`,
                             alt=`thumb ${i}`
                         )
-
+        .swiper-text-content    
+            .swiper-wrapper 
+                .swiper-slide 
+                    .swiper-slide__text
+                        .swiper-slide__title Project goal
+                        p.swiper-slide__desc Build a private house 840 sq. feet with a large living room, three bedrooms, two bathrooms, a terrace, a pool and a garage for two cars.
+                        p.swiper-slide__desc Modern design and care for each family member to feel as comfortable as possible in the new home.
+                    .swiper-slide__info 
+                        ul.swiper-slide__list
+                            div
+                                li LOCATION 
+                                span 2464 Royal Ln. Mesa, New Jersey
+                            div
+                                li CLIENT
+                                span Darlene Robertson
+                            div
+                                li ARCHITECT
+                                span HIK Architecture
+                            div
+                                li SIZE
+                                span 840 sq. feet
+                            div
+                                li VALUE
+                                span $2 million
+                            div
+                                li COMPLETED
+                                span May 2020
