--- a/src/scss/pages/homepage/work/modern_cottage/swiper.scss
+++ b/src/scss/pages/homepage/work/modern_cottage/swiper.scss
@@ -21,6 +21,96 @@
         max-width: 100%;
         position: relative;
 
+        &-slide {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 50px;
+            flex-wrap: wrap;
+
+            &__text {
+                width: 100%;
+                max-width: 600px;
+            }
+
+            &__title {
+                font-size: 46px;
+                font-weight: 700;
+                color: #1E212C;
+                margin-bottom: 45px;
+
+                @include respond-to(mobile) {
+                    font-size: 27px;
+                }
+            }
+
+            &__desc {
+                font-size: 18px;
+                color: #424551;
+                line-height: 150%;
+                margin-bottom: 25px;
+
+                @include respond-to(mobile) {
+                    font-size: 16px;
+                }
+            }
+
+            &__info {
+                box-shadow: (0px 4px 4px -4px rgba(30, 33, 44, 0.03),
+                        0 12px 10px -6px rgba(154, 156, 165, 0.04));
+                background-color: #fff;
+                padding: 42px 65px;
+
+                @include respond-to(tablet) {
+                    padding: 23px 13px;
+                }
+            }
+
+            &__list {
+
+                div {
+                    display: flex;
+                    justify-content: space-between;
+                    margin-bottom: 24px;
+
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+                }
+
+                li {
+                    width: 100%;
+                    max-width: 90px;
+                    font-size: 16px;
+                    font-weight: 700;
+                    text-transform: uppercase;
+                    color: #1E212C;
+                    margin-right: 40px;
+
+                    @include respond-to(tablet) {
+                        font-size: 11px;
+                        margin-right: 10px;
+                    }
+                }
+
+                span {
+                    display: block;
+                    width: 100%;
+                    max-width: 245px;
+                    color: #787A80;
+                    text-transform: capitalize;
+                    font-weight: 400;
+                    text-align: left;
+                    text-wrap: nowrap;
+
+                    @include respond-to(tablet) {
+                        font-size: 11px;
+                        margin-right: 10px;
+                    }
+                }
+            }
+        }
+
         .round-btn {
             img {
                 width: 18px;
@@ -55,7 +145,21 @@
     }
 
     &-thumbs {
+        display: block;
         height: 100px;
+        margin-bottom: 102px;
+
+        @include respond-to(mobile) {
+            margin-bottom: 0;
+        }
+
+
+        .swiper-wrapper {
+            @include respond-to(tablet) {
+                display: none;
+            }
+
+        }
 
         .swiper-slide {
             height: 100px;
@@ -63,10 +167,6 @@
             cursor: pointer;
             transition: opacity 0.3s ease;
             max-width: 100px;
-
-            @include respond-to(tablet) {
-                display: none;
-            }
 
             &-thumb-active {
                 opacity: 1;
