finished decisions block adaptive layout

--- a/src/pug/pages/homepage/work/modern_cottage/index.pug
+++ b/src/pug/pages/homepage/work/modern_cottage/index.pug
@@ -17,6 +17,8 @@ html(lang="en")
         -   
         +hero(heroData.modernCottage)
             include ./slider.pug
+        include ./decisions.pug
+        
 
         include ../../../../partials/components/form.pug
         include ../../../../partials/components/footer.pug
