--- a/src/scss/pages/homepage/work/modern_cottage/swiper.scss
+++ b/src/scss/pages/homepage/work/modern_cottage/swiper.scss
@@ -3,6 +3,10 @@
 .section-gallery {
     padding: 18px 0;
     padding-bottom: 100px;
+
+    @include respond-to(tablet) {
+        padding-bottom: 40px;
+    }
 }
 
 .gallery {
