--- a/src/scss/pages/homepage/work/modern_cottage/decisions.scss
+++ b/src/scss/pages/homepage/work/modern_cottage/decisions.scss
@@ -29,6 +29,8 @@
     }
 
     &__leftside {
+        margin-bottom: -61px;
+
         @include respond-to(tablet) {
             display: none;
         }
