--- a/src/scss/pages/homepage/main.scss
+++ b/src/scss/pages/homepage/main.scss
@@ -10,3 +10,4 @@
 @use './services/interior_design/main.scss' as interior_desing;
 @use './work/main.scss' as work_page;
 @use './work/modern_cottage/main.scss' as modern_cottage_page;
+@use './about/main.scss' as about_page;
