--- a/src/scss/components/hero.scss
+++ b/src/scss/components/hero.scss
@@ -9,15 +9,11 @@
         height: auto;
     }
 
-    @include respond-to(tablet) {
-        // height: 350px;
-    }
-
     &__bg {
         position: relative;
         margin-left: auto;
-        width: 100%;
         height: 100%;
+        min-height: 350px;
 
         img {
             position: absolute;
