reformed component to mixin

--- a/src/pug/pages/homepage/about/index.pug
+++ b/src/pug/pages/homepage/about/index.pug
@@ -13,6 +13,7 @@ html(lang="en")
         +hero(heroData.about)
         include ./results.pug
         include ./quotes.pug
+        include ./target.pug
 
         include ../../../partials/components/form.pug
         include ../../../partials/components/footer.pug
