--- a/src/scss/pages/homepage/target.scss
+++ b/src/scss/pages/homepage/target.scss
@@ -10,6 +10,10 @@
         margin-bottom: 40px;
     }
 
+    .grey {
+        background-color: #F4F5F6;
+    }
+
     &__title {
         font-size: 46px;
         margin-bottom: 32px;
