added parness block

--- a/src/pug/pages/homepage/about/index.pug
+++ b/src/pug/pages/homepage/about/index.pug
@@ -14,6 +14,7 @@ html(lang="en")
         include ./results.pug
         include ./quotes.pug
         include ./target.pug
+        include ./parthners.pug
 
         include ../../../partials/components/form.pug
         include ../../../partials/components/footer.pug
