--- a/src/pug/pages/homepage/about/index.pug
+++ b/src/pug/pages/homepage/about/index.pug
@@ -1,3 +1,5 @@
+include ../../../_paths.pug
+
 doctype html
 html(lang="en")
     head
@@ -5,6 +7,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Document
         link(rel="stylesheet", href="/css/main.min.css")
+        link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css')
     body 
         include ../../../partials/data/_hero_data.pug
         include ../../../partials/mixins/_hero.pug
@@ -14,8 +17,13 @@ html(lang="en")
         include ./results.pug
         include ./quotes.pug
         include ./target.pug
+        include ./history.pug
         include ./parthners.pug
 
         include ../../../partials/components/form.pug
         include ../../../partials/components/footer.pug
+        
+        script(type="module", src=`${paths.js}/about/activeFocus.js`)
+        script(src='https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js')
+        script(type="module", src=`${paths.js}/about/history.js`)
 
