finished team block adaptive layout

--- a/src/pug/pages/homepage/about/index.pug
+++ b/src/pug/pages/homepage/about/index.pug
@@ -19,6 +19,7 @@ html(lang="en")
         include ./target.pug
         include ./history.pug
         include ./parthners.pug
+        include ./team.pug
 
         include ../../../partials/components/form.pug
         include ../../../partials/components/footer.pug
