finished map-world block adaptive layout

--- a/src/pug/pages/homepage/about/index.pug
+++ b/src/pug/pages/homepage/about/index.pug
@@ -20,6 +20,7 @@ html(lang="en")
         include ./history.pug
         include ./parthners.pug
         include ./team.pug
+        include ./world-map.pug
 
         include ../../../partials/components/form.pug
         include ../../../partials/components/footer.pug
