finished available-positions page adaptive layout

--- a/src/pug/pages/homepage/about/team.pug
+++ b/src/pug/pages/homepage/about/team.pug
@@ -38,4 +38,4 @@ section.team
         .team__footer
             p.team__footer-text
                 | Become a part of the best team in the construction market of the USA.
-                a.team__footer-link(href="#") Available Positions
+                a.team__footer-link(href="/pages/homepage/about/available_positions") Available Positions
