--- a/src/pug/partials/data/_hero_data.pug
+++ b/src/pug/partials/data/_hero_data.pug
@@ -49,10 +49,11 @@ include ../../_paths.pug
             {
                 className: 'hero__content--absolute',
                 imgUrl: `${paths.img.img}/available-positions/head-bg.png`,
-                breadcrumbs: "Homepage / About Us",
+                breadcrumbs: "Homepage / About Us / ",
                 activeBreadcrumb: "Available Positions",
                 title: 'Available Positions',
-                desc: "Build your career with Createx Construction Bureau."
+                desc: "Build your career with Createx Construction Bureau.",
+                class: 'pt-95'
             },
         news: 
             {
