finished news adaptive layout

--- a/src/pug/partials/data/_hero_data.pug
+++ b/src/pug/partials/data/_hero_data.pug
@@ -58,7 +58,7 @@ include ../../_paths.pug
         news: 
             {
                 className: 'hero__content--absolute',
-                imgUrl: `${paths.img.img}/services/background.png`,
+                imgUrl: `${paths.img.img}/news/news-bg.png`,
                 breadcrumbs: "Homepage / ",
                 activeBreadcrumb: "News",
                 title: 'News',
