--- a/src/scss/pages/homepage/main.scss
+++ b/src/scss/pages/homepage/main.scss
@@ -11,3 +11,4 @@
 @use './work/main.scss' as work_page;
 @use './work/modern_cottage/main.scss' as modern_cottage_page;
 @use './about/main.scss' as about_page;
+@use './news/main.scss' as news_page;
