finished how-to-build page adaptive layout

--- a/src/pug/partials/data/_hero_data.pug
+++ b/src/pug/partials/data/_hero_data.pug
@@ -64,14 +64,15 @@ include ../../_paths.pug
                 title: 'News',
                 desc: "Stay tuned with our news, expert tips and articles."
             },
-        hoToBuild: 
-            {
-                className: 'hero__content--absolute',
-                imgUrl: `${paths.img.img}/services/background.png`,
+        howToBuild: 
+            {   
+                pb204: 'pb204',
+                fz64: 'fz64',
+                ttcc: 'ttcc',
+                width100: 'w100',
                 breadcrumbs: "Homepage / News ",
                 activeBreadcrumb: "How to Build Climate Change-Resilient Infrastructure",
                 title: 'How to Build Climate Change-Resilient Infrastructure',
-                desc: "Stay tuned with our news, expert tips and articles."
             },
         contacts: 
             {   
