--- a/src/pug/pages/homepage/news/blog.pug
+++ b/src/pug/pages/homepage/news/blog.pug
@@ -20,11 +20,11 @@ section.blog
 
         .blog__grid
             article.blog-card(data-category="Industry News" data-page="1")
-                a.blog-card__image(href="#")
+                a.blog-card__image(href="/pages/homepage/news/how_to_build")
                     img(src=`${paths.img.img}/news/image-1.png`, alt="banner")
                 .blog-card__content
                     h3.blog-card__title
-                        a(href="#") How to Build Climate Change-Resilient Infrastructure
+                        a(href="/pages/homepage/news/how_to_build") How to Build Climate Change-Resilient Infrastructure
                     .blog-card__meta
                         span Industry News
                         span June 24, 2020
@@ -33,11 +33,11 @@ section.blog
                         | Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas faucibus. Tincidunt aliquet sit vel, venenatis nulla. Integer bibendum turpis convallis...
 
             article.blog-card(data-category="Innovation" data-page="1")
-                a.blog-card__image(href="#")
+                a.blog-card__image(href="/pages/homepage/news/how_to_build")
                     img(src=`${paths.img.img}/news/image-2.png`, alt="banner")
                 .blog-card__content
                     h3.blog-card__title
-                        a(href="#") How Construction Can Help Itself
+                        a(href="/pages/homepage/news/how_to_build") How Construction Can Help Itself
                     .blog-card__meta
                         span Innovation
                         span June 12, 2020
@@ -46,11 +46,11 @@ section.blog
                         | Porta habitant vitae quam interdum. Leo viverra non volutpat rhoncus placerat vitae scelerisque. Rhoncus augue faucibus maecenas lacus...
 
             article.blog-card(data-category="Expert Tips" data-page="1")
-                a.blog-card__image(href="#")
+                a.blog-card__image(href="/pages/homepage/news/how_to_build")
                     img(src=`${paths.img.img}/news/image-3.png`, alt="banner")
                 .blog-card__content
                     h3.blog-card__title
-                        a(href="#") The Difference Between a Digger and an Excavator
+                        a(href="/pages/homepage/news/how_to_build") The Difference Between a Digger and an Excavator
                     .blog-card__meta
                         span Expert Tips
                         span May 16, 2020
@@ -59,11 +59,11 @@ section.blog
                         | Cras est nisi purus velit facilisi vitae, dolor. Lorem scelerisque integer duis et nulla lobortis cursus. Viverra erat sollicitudin praesent viverra...
 
             article.blog-card(data-category="Expert Tips" data-page="1")
-                a.blog-card__image(href="#")
+                a.blog-card__image(href="/pages/homepage/news/how_to_build")
                     img(src=`${paths.img.img}/news/image-4.png`, alt="banner")
                 .blog-card__content
                     h3.blog-card__title
-                        a(href="#") Building Construction Hand Tools
+                        a(href="/pages/homepage/news/how_to_build") Building Construction Hand Tools
                     .blog-card__meta
                         span Expert Tips
                         span February 25, 2020
@@ -72,11 +72,11 @@ section.blog
                         | Tellus quis aliquet volutpat nunc pulvinar donec sed sapien. Vitae elit id dolor, tristique massa. Fames lobortis orci rutrum bibendum integer...
 
             article.blog-card(data-category="Industry News" data-page="1")
-                a.blog-card__image(href="#")
+                a.blog-card__image(href="/pages/homepage/news/how_to_build")
                     img(src=`${paths.img.img}/news/image-5.png`, alt="banner")
                 .blog-card__content
                     h3.blog-card__title
-                        a(href="#") Top 10 Construction Trends
+                        a(href="/pages/homepage/news/how_to_build") Top 10 Construction Trends
                     .blog-card__meta
                         span Industry News
                         span January 14, 2020
@@ -85,11 +85,11 @@ section.blog
                         | Dignissim sed enim, eleifend morbi condimentum. Congue id quis vulputate dignissim eget. Ac ullamcorper nunc habitasse enim interdum platea...
 
             article.blog-card(data-category="Company News" data-page="1")
-                a.blog-card__image(href="#")
+                a.blog-card__image(href="/pages/homepage/news/how_to_build")
                     img(src=`${paths.img.img}/news/image-6.png`, alt="banner")
                 .blog-card__content
                     h3.blog-card__title
-                        a(href="#") Types of Flooring Materials
+                        a(href="/pages/homepage/news/how_to_build") Types of Flooring Materials
                     .blog-card__meta
                         span Company News
                         span December 1, 2019
