--- a/src/scss/pages/homepage/main.scss
+++ b/src/scss/pages/homepage/main.scss
@@ -12,3 +12,4 @@
 @use './work/modern_cottage/main.scss' as modern_cottage_page;
 @use './about/main.scss' as about_page;
 @use './news/main.scss' as news_page;
+@use './news/how_to_build/main.scss' as how_to_build_page;
