finished form block adaptive layout

--- a/src/scss/pages/homepage/main.scss
+++ b/src/scss/pages/homepage/main.scss
@@ -13,3 +13,4 @@
 @use './about/main.scss' as about_page;
 @use './news/main.scss' as news_page;
 @use './news/how_to_build/main.scss' as how_to_build_page;
+@use './contacts/main.scss' as contacts_page;
