--- a/src/pug/partials/components/footer.pug
+++ b/src/pug/partials/components/footer.pug
@@ -44,16 +44,16 @@ include ../../_paths.pug
                                     span.form__desc *Subscribe to our newsletter to receive communications and early updates from Createx Construction Bureau.
                 .middle             
                     .middle__block
-                        .contacts 
-                            h6.contacts__title.middle__title HEAD OFFICE
-                            ul.contacts__list.middle__list 
-                                li.contacts__item.middle__item
+                        .contact 
+                            h6.contact__title.middle__title HEAD OFFICE
+                            ul.contact__list.middle__list 
+                                li.contact__item.middle__item
                                     span Address: 
                                     a(href="#") 8502 Preston Rd. Inglewood, New York
-                                li.contacts__item.middle__item
+                                li.contact__item.middle__item
                                     span Call: 
                                     a(href="tel:+4055550128") (405) 555-0128
-                                li.contacts__item.middle__item
+                                li.contact__item.middle__item
                                     span Email: 
                                     a(href="mailto:hello@createx.com") hello@createx.com
                         .about 
