--- a/src/scss/components/form.scss
+++ b/src/scss/components/form.scss
@@ -39,7 +39,7 @@
     }
 
     &__title {
-        font-size: 28px;
+        font-size: 24px;
         font-weight: 700;
         margin-bottom: 32px;
         text-align: center;
@@ -72,6 +72,10 @@
             flex-direction: column;
             gap: 23px;
         }
+
+        @include respond-to(mobile) {
+            padding: 10px 16px;
+        }
     }
 
     &__input-item {
@@ -93,6 +97,10 @@
         padding: 14px 32px;
         margin: -9px auto 0;
         font-size: 14px;
+
+        @include respond-to(laptop-l) {
+            margin: 9px auto 0;
+        }
     }
 }
 
@@ -131,18 +139,29 @@
     max-width: 486px;
     background-color: #fff;
     z-index: 999;
-    top: 0;
-    right: 0;
-    transform: translate(-150%, 50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
+    @include respond-to(mobile) {
+        padding: 20px;
+    }
 
 
     .form__input {
         width: 100%;
         max-width: 390px;
 
+        @include respond-to(laptop-l) {
+            padding: 12px 16px;
+        }
+
         &-wrap {
             margin: 0 auto;
+
+            @include respond-to(laptop-l) {
+                gap: 12px;
+            }
         }
     }
 
